--- a/Webbutveckling/Hemsidor/Läxhjälpen/style.css
+++ b/Webbutveckling/Hemsidor/Läxhjälpen/style.css
@@ -1,9 +1,27 @@
 body
 {
 	margin: auto;
-	width: 1024px;
+	width: 100%;
 	font-family: sans-serif;
 	font-size: 100%;
+}
+
+.menu a:link, .menu a:visited
+{
+	text-decoration: none;
+	color: #000;
+}
+
+.menu a:hover, .menu a:focus
+{
+	text-decoration: underline;
+	color: #a62f00;
+}
+
+.menu a:active
+{
+	text-decoration: underline;
+	color: #ff4900;
 }
 
 section, header, footer
@@ -16,7 +34,7 @@ header
 	text-align: center;
 }
 
-.startpage > section > h1
+.startpage > header h1
 {
 	font-size: 500%;
 }
@@ -25,6 +43,34 @@ header
 {
 	font-size: 120%;
 	padding: 0.5em;
-	border-top: 3px solid #000000;
-	border-bottom: 3px solid #000000;
+	border-top: 3px double #000000;
+	border-bottom: 3px double #000000;
+}
+
+.startpage > section
+{
+	display: inline-block;
+	width: 20%;
+	margin-right: 6%;
+}
+
+.startpage > section:Last-of-type
+{
+	margin-right: 0;	
+}
+
+.startpage > section > h2
+{
+	margin: 0 0 1em;
+	padding: 2em 0;
+	background-color: #f5f5f5;
+	text-align: center;
+}
+
+footer
+{
+	display: block;
+	margin: 3em 0;
+	text-align: center;
+	color: #777;
 }
