--- a/Webbutveckling/Hemsidor/Min portfolio/Stil.css
+++ b/Webbutveckling/Hemsidor/Min portfolio/Stil.css
@@ -7,15 +7,27 @@ body
 
 header
 {
-	height: 100px;
-	background-color: black;
+	background-image: url(Header.jpg);
+	background-repeat: no-repeat;
+	border: 1px solid #000;
 }
 
-h1
+
+header > h1
 {
 	color: red;
 	text-align: center;
 	margin: 0;
+	
+	border: 1px solid #fff;
+	background-color: #fff;
+	padding: 1.5% 0%;
+	border-radius: 60%;
+	-webkit-border-radius: 60%;
+	-moz-border-radius: 60%;
+	-ms-border-radius: 60%;
+	-o-border-radius: 60%;
+	width: 40%;
 }
 
 #Buttons
@@ -28,13 +40,5 @@ h2
 {
 	display: inline-block;
 	border: 1px solid #000;
-}
-
-#headform
-{
-	border: 1px solid #fff;
-	padding: 20px 0px;
-	background-color: #fff;
-	width: 50%;
-	border-radius: 50%;
+	margin: 0;
 }
