--- a/Webbutveckling/Hemsidor/Min portfolio/Stil.css
+++ b/Webbutveckling/Hemsidor/Min portfolio/Stil.css
@@ -7,38 +7,52 @@ body
 
 header
 {
-	background-image: url(Header.jpg);
-	background-repeat: no-repeat;
+	background-image: url(images/header.jpg);
 	border: 1px solid #000;
 }
 
-
-header > h1
+#style
 {
-	color: red;
 	text-align: center;
-	margin: 0;
 	
 	border: 1px solid #fff;
 	background-color: #fff;
-	padding: 1.5% 0%;
-	border-radius: 60%;
-	-webkit-border-radius: 60%;
-	-moz-border-radius: 60%;
-	-ms-border-radius: 60%;
-	-o-border-radius: 60%;
-	width: 40%;
+	padding: 2% 0;
+	border-radius: 100%;
+	-webkit-border-radius: 100%;
+	-moz-border-radius: 100%;
+	-ms-border-radius: 100%;
+	-o-border-radius: 100%;
+	width: 50%;
 }
 
-#Buttons
+#buttons
 {
-	background-color: white;
 	margin-top: 3%;
+	padding: 0;
+	text-align: center;
 }
 
-h2
+#buttons > li
 {
 	display: inline-block;
-	border: 1px solid #000;
+	border: 3px solid #000;
 	margin: 0;
+	width: 24.2%;
+	height: 100px;
+	font-size: 30pt;
+	text-shadow: 3px 3px #909090;
 }
+
+#buttons > li > a
+{
+	display: block;
+	height: 100%;
+	background-color: #fff;
+}
+
+#buttons > li > a:hover
+{
+	background-color: #f00;
+}
+
