--- a/Webbutveckling/Hemsidor/Min portfolio/Stil.css
+++ b/Webbutveckling/Hemsidor/Min portfolio/Stil.css
@@ -86,19 +86,41 @@ header
 {
 	width: 20%;
 	height: 20%;
-	margin-left: 70%;
+	vertical-align: top;
+	display: inline-block;
+	margin-left: 5%;
+}
+
+#contenttext > p, #contenttext > h3
+{
+	border: 0px solid #000;
+	background-color: rgba(255, 255, 255, 0.4);
+	padding: 1%;
 }
 
 #contenttext > p
 {
-	border:1px solid #000;
-	display: inline-block;
-	background-color: rgba(255, 255, 255, 0.5);
+	margin: 0;
+	font-size: 13pt;
+}
+
+#contenttext > h3
+{
+	margin-bottom: 0;
 }
 
 #contenttext
 {
-	
+	width: 60%;
+	display: inline-block;
+	margin: 0 3%;
+}
+
+#facebook_logo
+{
+	width: 3%;
+	border: 3px solid #000;
+	vertical-align: middle;
 }
 
 footer
@@ -109,3 +131,10 @@ footer
 	margin-top: 1%;
 }
 
+footer > p
+{
+	font-size: 13pt;
+	margin-left: 2%;
+	border: 3px solid #000;
+	display: inline-block;
+}
