--- a/Webbutveckling/Hemsidor/Min portfolio/Stil.css
+++ b/Webbutveckling/Hemsidor/Min portfolio/Stil.css
@@ -31,7 +31,7 @@ header
 	-ms-border-radius: 100%;
 	-o-border-radius: 100%;
 	width: 45%;
-	margin: 15px auto;
+	margin: 0.938em auto;
 }
 
 #buttons
@@ -82,6 +82,11 @@ header
 	transition: background-color 1s;
 }
 
+#buttons > li > a:active
+{
+	text-shadow: 0 0;
+}
+
 #picture
 {
 	width: 20%;
@@ -89,6 +94,11 @@ header
 	vertical-align: top;
 	display: inline-block;
 	margin-left: 5%;
+}
+
+#picture:hover
+{
+	opacity: 0.95;
 }
 
 #contenttext > p, #contenttext > h3
