--- a/Webbutveckling/Hemsidor/Min portfolio/Stil.css
+++ b/Webbutveckling/Hemsidor/Min portfolio/Stil.css
@@ -11,6 +11,7 @@ body
 	margin: 0;
 	padding: 0;
 	background-color: #5549f8;
+	position: relative;
 }
 
 header
@@ -32,6 +33,11 @@ header
 	-o-border-radius: 100%;
 	width: 45%;
 	margin: 0.938em auto;
+}
+
+#header_style > a > img
+{
+	width: 50%;
 }
 
 #buttons
@@ -91,9 +97,8 @@ header
 {
 	width: 20%;
 	height: 20%;
-	vertical-align: top;
-	display: inline-block;
-	margin-left: 5%;
+	float: right;
+	margin-right: 5%;
 }
 
 #picture:hover
@@ -101,29 +106,35 @@ header
 	opacity: 0.95;
 }
 
-#contenttext > p, #contenttext > h3
+.clear
+{
+	clear: both;
+}
+
+.contenttext > p, .contenttext > h3
 {
 	border: 0px solid #000;
-	background-color: rgba(255, 255, 255, 0.4);
 	padding: 1%;
 }
 
-#contenttext > p
+.contenttext > p
 {
 	margin: 0;
 	font-size: 13pt;
 }
 
-#contenttext > h3
+.contenttext > h3
 {
 	margin-bottom: 0;
 }
 
-#contenttext
+.contenttext
 {
 	width: 60%;
 	display: inline-block;
-	margin: 0 3%;
+	margin: 1% 3%;
+	background-color: rgba(255, 255, 255, 0.4);
+	border: 1px solid #000;
 }
 
 #logos > a > img
@@ -141,15 +152,26 @@ header
 	margin-top: 0.5%;
 }
 
+.container
+{
+	padding-bottom: 55px;
+	overflow: auto;
+}
+
 footer
 {
 	color: #fff;
 	background-color: #272222;
-	margin-top: 1%;
+	margin-top: 3%;
+	height: 55px;
+	position: absolute;
+	bottom: 0;
 }
+
 
 footer > p
 {
+	max-width: 600px;
 	font-size: 13pt;
 	margin-left: 2%;
 	display: inline-block;
