--- a/Webbutveckling/Hemsidor/Min portfolio/Stil.css
+++ b/Webbutveckling/Hemsidor/Min portfolio/Stil.css
@@ -4,6 +4,12 @@ Contact: E-mail Elias.axelsson.te12d@gmail.com
 Description: Css for my portifolio
 */ 
 
+/*Till alla sidor*/
+html
+{
+	width: 100%;
+	height: 60%;
+}
 body
 {
 	width: 100%;
@@ -11,7 +17,6 @@ body
 	margin: 0;
 	padding: 0;
 	background-color: #5549f8;
-	position: relative;
 }
 
 header
@@ -93,24 +98,6 @@ header
 	text-shadow: 0 0;
 }
 
-#picture
-{
-	width: 20%;
-	height: 20%;
-	float: right;
-	margin-right: 5%;
-}
-
-#picture:hover
-{
-	opacity: 0.95;
-}
-
-.clear
-{
-	clear: both;
-}
-
 .contenttext > p, .contenttext > h3
 {
 	border: 0px solid #000;
@@ -126,6 +113,7 @@ header
 .contenttext > h3
 {
 	margin-bottom: 0;
+	font-size: 16pt;
 }
 
 .contenttext
@@ -135,6 +123,17 @@ header
 	margin: 1% 3%;
 	background-color: rgba(255, 255, 255, 0.4);
 	border: 1px solid #000;
+}
+
+.container
+{
+	padding-bottom: 55px;
+	min-height: 100%;
+}
+
+.clear
+{
+	clear: both;
 }
 
 #logos > a > img
@@ -152,20 +151,14 @@ header
 	margin-top: 0.5%;
 }
 
-.container
-{
-	padding-bottom: 55px;
-	overflow: auto;
-}
-
 footer
 {
 	color: #fff;
 	background-color: #272222;
 	margin-top: 3%;
 	height: 55px;
-	position: absolute;
-	bottom: 0;
+	position: relative;
+	clear:both;
 }
 
 
@@ -175,4 +168,27 @@ footer > p
 	font-size: 13pt;
 	margin-left: 2%;
 	display: inline-block;
+}
+
+
+/*Om mig sidan*/
+#picture
+{
+	width: 29%;
+	float: right;
+	margin-right: 4%;
+}
+
+
+/*Index sidan*/
+#pictureOfMe
+{
+	width: 20%;
+	float: right;
+	margin-right: 5%;
+}
+
+#pictureOfMe:hover
+{
+	opacity: 0.95;
 }
